@@ -30,7 +30,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 import java.util.Collections;
 import java.util.List;
@@ -40,7 +40,7 @@ import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 import static org.mockito.AdditionalAnswers.returnsFirstArg;
-import static org.mockito.Matchers.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -108,7 +108,7 @@ public class SavedSnapshotControllerTest {
 
         final SavedSnapshot updatedQuery = savedSnapshotController.update(42, savedSnapshot);
         verify(savedSnapshotService).update(isA(SavedSnapshot.class));
-        assertEquals(new Long(42L), updatedQuery.getId());
+        assertEquals(Long.valueOf(42L), updatedQuery.getId());
     }
 
     @Test
